--- a/src/main/webapp/css/demo.css
+++ b/src/main/webapp/css/demo.css
@@ -5,11 +5,7 @@ div.demo-block {
 	min-height: 400px;
 	width: 80%;
 	margin: 0 auto;
-	padding-top: 100px;
-}
-
-div.big {
-	padding-top: 50px !important;
+	padding-top: 60px;
 }
 
 .links {
@@ -35,4 +31,5 @@ div.big {
 
 .data-ace {
 	width: 100%;
+	height: 300px;
 }
